core/codegen/tests/ui-fail-stable/bad-ignored-segments.stderr
error: parameter must be named
  --- help: use a name such as `_guard` or `_param`
 --> $DIR/bad-ignored-segments.rs:5:7
  |
5 | #[get("/c?<_>")]
  |       ^^^^^^^^

error: parameter must be named
  --- help: use a name such as `_guard` or `_param`
 --> $DIR/bad-ignored-segments.rs:8:21
  |
8 | #[post("/d", data = "<_>")]
  |                     ^^^^^
